refactor(product): segregate application and api DTOs